--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,43 +12,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+    - name: Print working directory
+      run: pwd
 
-      - name: Run Flake8 Linter
-        run: |
-          echo "Linting Python files..."
-          find . -name "*.py" -exec flake8 {} +
-          echo "Linted all the Python files successfully."
+    - name: Run Python Linter
+      run: |
+        # This command finds all Python files recursively and runs flake8 on them
+        find . -name "*.py" -exec flake8 {} \;
+        echo "Linted all Python files successfully"
 
   lint_js:
     name: Lint JavaScript Files
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 14
 
-      - name: Install JSHint
-        run: npm install -g jshint
+    - name: Install JSHint
+      run: npm install -g jshint
 
-      - name: Run JSHint Linter
-        run: |
-          echo "Linting JavaScript files..."
-          find . -name "*.js" -exec jshint {} +
-          echo "Linted all the JavaScript files successfully."
+    - name: Run JavaScript Linter
+      run: |
+        # This command finds all JavaScript files recursively and runs JSHint on them
+        find . -name "*.js" -exec jshint {} \;
+        echo "Linted all JavaScript files successfully"
